fix extra margin on persona detail page (bug 565343)

--- a/media/css/zamboni/zamboni.css
+++ b/media/css/zamboni/zamboni.css
@@ -2232,7 +2232,7 @@ form .error .note.error {
     float: none;
 }
 
-#addon-summary .addon-rating,
+.addon-rating,
 .listing.compact .item .meta .addon-rating,
 .listing.compact .item .meta .downloads,
 .listing.compact .item .meta .updated {
